@@ -16,7 +16,7 @@ C++ to use the Qt framework.
 The name of the application refers to the sound effect that is made when
 eating something tasty or nutritious.
 
-WWW: <http://nomnom.googlecode.com/>
+WWW: <http://nomnom.sourceforge.net/>
 GIT: <git://repo.or.cz/nomnom.git>
 
 
