@@ -30,7 +30,7 @@ CREATING NEW TRANSLATION
 
 Checklist
 
-  1) Get the latest source code from <http://nomnom.googlecode.com/>
+  1) Get the latest source code from <http://nomnom.sourceforge.net/>
 
      - Please do not use the NomNom git repository code for this,
      the development code is a subject to frequent changes
