@@ -41,7 +41,7 @@ p, li { white-space: pre-wrap; }
 &lt;td&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:&apos;Verdana&apos;; font-weight:600;&quot;&gt;WWW&lt;/span&gt;&lt;span style=&quot; font-family:&apos;Verdana&apos;;&quot;&gt;  &lt;/span&gt;&lt;/p&gt;&lt;/td&gt;
 &lt;td&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:&apos;Verdana&apos;;&quot;&gt;: &amp;lt;&lt;/span&gt;&lt;a href=&quot;http://nomnom.googlecode.com/&quot;&gt;&lt;span style=&quot; font-family:&apos;Verdana&apos;; text-decoration: underline; color:#0000ee;&quot;&gt;http://nomnom.googlecode.com/&lt;/span&gt;&lt;/a&gt;&lt;span style=&quot; font-family:&apos;Verdana&apos;;&quot;&gt;&amp;gt;&lt;/span&gt;&lt;/p&gt;&lt;/td&gt;&lt;/tr&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:&apos;Verdana&apos;;&quot;&gt;: &amp;lt;&lt;/span&gt;&lt;a href=&quot;http://nomnom.sourceforge.net/&quot;&gt;&lt;span style=&quot; font-family:&apos;Verdana&apos;; text-decoration: underline; color:#0000ee;&quot;&gt;http://nomnom.sourceforge.net/&lt;/span&gt;&lt;/a&gt;&lt;span style=&quot; font-family:&apos;Verdana&apos;;&quot;&gt;&amp;gt;&lt;/span&gt;&lt;/p&gt;&lt;/td&gt;&lt;/tr&gt;
 &lt;tr&gt;
 &lt;td&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:&apos;Verdana&apos;; font-weight:600;&quot;&gt;Git&lt;/span&gt;&lt;span style=&quot; font-family:&apos;Verdana&apos;;&quot;&gt;  &lt;/span&gt;&lt;/p&gt;&lt;/td&gt;
